--- a/index.html
+++ b/index.html
@@ -1,23 +1,5 @@
-<!-- Please ❤ this if you like it! ---
----- Follow Me https://codepen.io/designfenix -->
-<!--
-----
-----
-----
-----
-----
-----
----->
+@import "{{ site.theme }}";
 <style>
-    /* Please ❤ this if you like it! */
-/* Follow Me https://codepen.io/designfenix */
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 :root {
 	--vs-primary: 29 92 255;
