--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <style>
 
 :root {
@@ -195,7 +192,7 @@ button.primary {
 
 <h1 style="font-size: 32px;color: white;position: absolute;"> Will you be Aaron's girlfriend 梦哲?
 </h1>
-<button class="primary" style="    margin-left: -35%;" onclick="window.dialog.showModal();">YES</button>
+<button class="primary"  onclick="window.dialog.showModal();">YES</button>
 <button class="primary" onclick="window.no.showModal();">NO</button>
 
 
@@ -221,6 +218,4 @@ button.primary {
 
 </script>
 
-<script>
 
-</script>
