--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ button.primary {
 	display: inline-block;
 	font-size: 0.8rem;
 	color: #fff !important;
-	background: rgb(var(--vs-primary) / 100%);
+	background: black;
 	padding: 13px 25px;
 	border-radius: 17px;
 	transition: background-color 0.1s ease;
