--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button.primary {
     margin-top: 20%;
     margin-right: 20px;
 	display: inline-block;
-	font-size: 0.8rem;
+	font-size: 1.8rem;
 	color: #fff !important;
 	background: black;
 	padding: 13px 25px;
@@ -81,6 +81,8 @@ button.primary {
 		box-shadow: 0 20px 20px -10px rgb(var(--vs-primary) / 50%);
 		transform: translateY(-5px);
 	}
+	width: 200px;
+    height: 94px;
 }
 
 @keyframes fadeIn {
@@ -180,7 +182,7 @@ button.primary {
   
 </style>
 <body>
-<h1 style="font-size: 32px;color: white;position: absolute;"> Will you be Aaron's girlfriend 梦哲?
+<h1 style="font-size: 47px;color: white;position: absolute;"> Will you be Aaron's girlfriend 梦哲?
 </h1>
 <button class="primary"  onclick="window.dialog.showModal();">YES</button>
 <button class="primary" onclick="window.no.showModal();">NO</button>
